[package]
name = "inturn"
version = "0.1.1"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
description = "Efficient, performant, thread-safe bytes/string interning"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
categories = ["caching"]
keywords = ["symbol", "interning", "string-interning", "hash", "cache"]
documentation = "https://docs.rs/inturn"
homepage = "https://github.com/danipopes/inturn"
repository = "https://github.com/danipopes/inturn"
exclude = [".github/", "benches/", "fuzz/", "tests/"]

[dependencies]
boxcar = "0.2"
bumpalo = { version = "3", default-features = false }
papaya = "0.2.3"
thread_local = "1.1.8"

[features]
nightly = ["thread_local/nightly"]

[profile.release]
lto = "thin"
panic = "abort"
